# CMake

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/kim/hsl/cmake/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
cmake_001_single/src/main/cpp/: CMakeLists.txt  native-lib.cpp
cmake_001_single/src/main/java/kim/hsl/cmake/: MainActivity.kt
cmake_001_single/src/main/res/values/: strings.xml
cmake_001_single/src/test/java/kim/hsl/cmake/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
